fix: drawer button background

--- a/assets/styles/tweak/_mdl.scss
+++ b/assets/styles/tweak/_mdl.scss
@@ -60,3 +60,6 @@
 .mdlext-layout__sticky-header.mdlext-is-scroll {
   background: rgba(255, 255, 255, .9);
 }
+.mdl-layout__header .mdl-layout__drawer-button {
+  background: transparent;
+}
