add: sandbox style

--- a/assets/styles/layouts/partials/_entry.scss
+++ b/assets/styles/layouts/partials/_entry.scss
@@ -55,7 +55,7 @@
     line-height: 2;
     margin: 0;
     padding: .2rem 0;
-    border-radius: ($spacer * .125);
+    border-radius: .15rem;
     @extend .mdl-color--blue-50, .mdl-color-text--blue-400;
 
     &:before,
