--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -26,6 +26,7 @@
 @import "components/breadcrumb";
 @import "components/mokuji";
 @import "components/loader";
+@import "components/sandbox";
 
 // Layout
 @import "layouts/header";
