--- a/assets/styles/common/_global.scss
+++ b/assets/styles/common/_global.scss
@@ -86,3 +86,10 @@ th {
 input {
   font-feature-settings: "liga" 0;
 }
+
+hr {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  border: 0;
+  border-top: 1px solid rgba(0, 0, 0, .1);
+}
