fix: entry text style

--- a/assets/styles/layouts/_home.scss
+++ b/assets/styles/layouts/_home.scss
@@ -90,6 +90,7 @@ $entry-thumbnail-size: 80px;
     }
     .entry-summary {
       font-size: $font-size-sm;
+      text-align: justify;
       @extend .mdl-color-text--grey-600;
     }
     .entry-footer {
