optimize: output file :shower:

--- a/assets/styles/_material-design-lite.scss
+++ b/assets/styles/_material-design-lite.scss
@@ -4,9 +4,12 @@
 
 @import "~material-design-lite/src/variables";
 @import "~material-design-lite/src/mixins";
+
+@import "~material-design-lite/src/resets/mobile";
 // @import "~material-design-lite/src/typography/typography";
+
 @import "~material-design-lite/src/palette/palette";
-@import "~material-design-lite/src/ripple/ripple";
+// @import "~material-design-lite/src/ripple/ripple";
 @import "~material-design-lite/src/animation/animation";
 // @import "~material-design-lite/src/badge/badge";
 @import "~material-design-lite/src/button/button";
@@ -14,9 +17,9 @@
 // @import "~material-design-lite/src/checkbox/checkbox";
 // @import "~material-design-lite/src/data-table/data-table";
 // @import "~material-design-lite/src/dialog/dialog";
-@import "~material-design-lite/src/footer/mega_footer";
+// @import "~material-design-lite/src/footer/mega_footer";
 @import "~material-design-lite/src/footer/mini_footer";
-@import "~material-design-lite/src/icon-toggle/icon-toggle";
+// @import "~material-design-lite/src/icon-toggle/icon-toggle";
 @import "~material-design-lite/src/list/list";
 @import "~material-design-lite/src/menu/menu";
 // @import "~material-design-lite/src/progress/progress";
@@ -29,7 +32,7 @@
 // @import "~material-design-lite/src/tabs/tabs";
 @import "~material-design-lite/src/textfield/textfield";
 // @import "~material-design-lite/src/tooltip/tooltip";
-@import "~material-design-lite/src/shadow/shadow";
+// @import "~material-design-lite/src/shadow/shadow";
 @import "~material-design-lite/src/grid/grid";
 
 // mdl-ext
