fix: layout style

--- a/assets/styles/layouts/_header.scss
+++ b/assets/styles/layouts/_header.scss
@@ -12,16 +12,11 @@
   }
 
   .mdl-textfield {
-    padding: 0;
-    .mdl-button {
-      bottom: auto;
-    }
+    padding: .5rem 0;
   }
 
-  .mdl-textfield--expandable .mdl-button--icon {
-    top: 0;
-    .material-icons {
-      height: auto;
-    }
+  .mdl-button:hover {
+    background: none;
   }
+
 }
