--- a/assets/styles/common/_grid.scss
+++ b/assets/styles/common/_grid.scss
@@ -2,6 +2,11 @@
   main {
     padding: 0 ($layout-header-desktop-baseline - $grid-desktop-margin);
 
+    > .mdl-grid {
+      padding-left: 0;
+      padding-right: 0;
+    }
+
     @media screen and (max-width: $layout-screen-size-threshold) {
       $grid-padding: $grid-desktop-margin + ($grid-desktop-gutter / 2);
       padding: 0 ($layout-header-desktop-baseline - $grid-padding);
@@ -10,13 +15,10 @@
     @media screen and (max-width: $screen-sm) {
       padding: 0;
     }
-
   }
 }
 
 .main-container {
-  padding-left: 0;
-  padding-right: 0;
   min-height: calc(100vh - #{$layout-desktop-header-height});
   max-width: $container-max-width;
 
