add: prismjs plugin
prism-command-line

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -9,6 +9,7 @@
 // prism.js
 @import "plugins/prismjs";
 @import "plugins/prism-line-numbers";
+@import "plugins/prism-command-line";
 
 // image-zoom
 @import "plugins/image-zoom";
