--- a/assets/styles/_animation.scss
+++ b/assets/styles/_animation.scss
@@ -1,5 +1,5 @@
 .showIn {
-  animation: showIn 0.3s $animation-curve-fast-out-slow-in forwards;
+  animation: showIn .3s $animation-curve-fast-out-slow-in forwards;
 }
 
 @keyframes showIn {
