fix: :recycle: scss file structure

--- a/assets/styles/config/_variables.scss
+++ b/assets/styles/config/_variables.scss
@@ -1,5 +1,7 @@
 // Material Design Lite define
 @import "~material-design-lite/src/color-definitions";
+@import "~material-design-lite/src/variables";
+@import "~material-design-lite/src/mixins";
 
 // Global Prefixer
 $prefix-for-webkit:    true;
