--- a/assets/styles/_font.scss
+++ b/assets/styles/_font.scss
@@ -31,6 +31,7 @@
   @include size(1rem);
 
   font-size: 1rem;
+  color: inherit;
   white-space: nowrap;
   direction: ltr;
   vertical-align: middle;
