--- a/assets/styles/parts/_entry-similar.scss
+++ b/assets/styles/parts/_entry-similar.scss
@@ -1,10 +1,13 @@
 .entry-similar {
   a {
-    border: 0 !important;
     @include ellipsis(100%);
 
     &:hover {
       text-decoration: underline;
     }
+  }
+  .mdl-list__item {
+    padding: .5rem;
+    line-height: 1.5rem;
   }
 }
