--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -31,7 +31,7 @@
 @import "parts/mokuji";
 @import "parts/loader";
 @import "parts/sandbox";
-@import "parts/entry-mata";
+@import "parts/entry-meta";
 @import "parts/entry-share";
 @import "parts/entry-similar";
 
