--- a/assets/styles/base/_global.scss
+++ b/assets/styles/base/_global.scss
@@ -32,12 +32,11 @@ body {
   }
 
   font-weight: $font-weight-base;
+  color: unquote("rgb(#{$palette-grey-700})");
+  background: unquote("rgb(#{$palette-grey-100})");
 
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-
-  // bg, color
-  @extend .mdl-color--grey-100, .mdl-color-text--grey-700;
 }
 
 
@@ -75,7 +74,7 @@ img {
 // Tables
 table {
   border-collapse: collapse;
-  @extend .mdl-color--white;
+  background: #fff;
 }
 
 th {
