--- a/assets/styles/layouts/_header.scss
+++ b/assets/styles/layouts/_header.scss
@@ -1,23 +1,13 @@
 .header-navigation {
   box-shadow: 0 2px 2px -2px rgba(0, 0, 0, .15);
 
-  .brand {
-    @extend .mdl-color-text--grey-900;
-  }
-
-  @media screen and (max-width: $screen-xs) {
-    .header-search {
-      display: none;
-    }
-  }
-
   .material-icons {
-    @extend .mdl-color-text--grey-800;
+    color: unquote("rgb(#{$palette-grey-800})");
   }
 
   .mdl-textfield {
     padding: .5rem 0;
-    @extend .mdl-color-text--grey-800;
+    color: unquote("rgb(#{$palette-grey-800})");
   }
 
   .mdl-button:hover {
@@ -26,5 +16,15 @@
 
   .mdl-layout__drawer-button {
     line-height: inherit;
+  }
+}
+
+.header-title {
+  color: unquote("rgb(#{$palette-grey-900})");
+}
+
+@media screen and (max-width: $screen-xs) {
+  .header-search {
+    display: none;
   }
 }
