--- a/assets/styles/pages/_single.scss
+++ b/assets/styles/pages/_single.scss
@@ -3,13 +3,15 @@
   border-radius: ($spacer * .125);
   box-shadow: 0 1px 4px rgba(0, 0, 0, .04);
   border: 1px solid rgba(0, 0, 0, .09);
-  @extend .mdl-color--white, .mdl-color-text--grey-700;
+  color: unquote("rgb(#{$palette-grey-700})");
+  background: #fff;
+
+  // &.mdl-cell {
+  //   margin: 0;
+  // }
 
   > header {
     margin-bottom: 2rem;
-  }
-  > footer {
-    margin-bottom: 1rem;
   }
 
   h1 {
@@ -34,6 +36,7 @@
 
   h2,
   h3 {
+    line-height: 1.3;
     margin-top: 2rem;
   }
 
@@ -61,7 +64,8 @@
     margin: 0;
     padding: .2rem 0;
     border-radius: .15rem;
-    @extend .mdl-color--blue-50, .mdl-color-text--blue-400;
+    color: unquote("rgb(#{$palette-blue-400})");
+    background: unquote("rgb(#{$palette-blue-50})");
 
     &:before,
     &:after {
@@ -78,7 +82,7 @@
     padding: 1.6rem;
     margin-left: .8em;
     border-left: 4px solid unquote("rgb(#{$palette-grey-200})");
-    @extend .mdl-color-text--grey-500;
+    color: unquote("rgb(#{$palette-grey-500})");
 
     p:first-child {
       margin-top: 0;
@@ -97,9 +101,9 @@
   }
 
   pre {
-    @extend .mdl-color--grey-100;
     padding: 2rem;
     border-radius: ($spacer * .15);
+    background: unquote("rgb(#{$palette-grey-100})");
 
     &.line-numbers {
       padding-left: 4rem;
@@ -126,7 +130,8 @@
 
     thead {
       th {
-        @extend .mdl-color--grey-100, .mdl-color-text--grey-800;
+        color: unquote("rgb(#{$palette-grey-800})");
+        background: unquote("rgb(#{$palette-grey-100})");
         vertical-align: bottom;
         border-bottom: (2 * $table-border-width) solid $table-border-color;
       }
@@ -160,7 +165,7 @@
     line-height: 1;
     margin: 2rem 0;
     text-align: center;
-    @extend .mdl-color-text--grey-600;
+    color: unquote("rgb(#{$palette-grey-600})");
 
     &:before {
       content: "***";
@@ -173,29 +178,28 @@
 .amazon-product {
   display: block;
   margin: 1rem 0;
-  border: 0 !important;
-  @extend .mdl-color-text--grey-700;
+  border: 1px solid rgba(0, 0, 0, .09) !important;
+  color: unquote("rgb(#{$palette-grey-600})") !important;
+  background: unquote("rgb(#{$palette-grey-50})");
 
   &:focus {
     outline: 0;
   }
-  .mdl-grid {
-    border: 1px solid rgba(0, 0, 0, .09);
-  }
   img {
     max-height: 10rem;
   }
-  .amazon-title,
-  .amazon-author,
-  .amazon-date {
-    display: block;
-  }
-  .amazon-title {
-    font-size: $font-size-lg;
-    font-weight: bold;
-    line-height: 2;
-  }
 }
+.amazon-title,
+.amazon-author,
+.amazon-date {
+  display: block;
+}
+.amazon-title {
+  font-size: $font-size-lg;
+  font-weight: bold;
+  line-height: 2;
+}
+
 
 .amazlet-image img {
   max-height: 10rem;
