--- a/assets/styles/parts/_entry-meta.scss
+++ b/assets/styles/parts/_entry-meta.scss
@@ -1,26 +1,24 @@
 .entry-meta {
   font-size: $font-size-sm;
-  @extend .mdl-color-text--grey-400;
+  color: unquote("rgb(#{$palette-grey-400})");
 
+  a {
+    color: inherit;
+    border: 0;
+    &:hover {
+      text-decoration: underline;
+    }
+  }
   ul {
     list-style: none;
     padding-left: 0;
+  }
+  li {
+    display: inline-block;
+    margin-bottom: 0;
 
-    > li {
-      display: inline-block;
-      margin-bottom: 0;
-
-      &:not(:first-child):not(:last-child) {
-        margin-right: .5rem;
-      }
-      a {
-        color: inherit;
-        border: 0;
-        &:hover {
-          text-decoration: underline;
-        }
-      }
-
+    &:not(:first-child):not(:last-child) {
+      margin-right: .5rem;
     }
   }
 
@@ -48,10 +46,11 @@
   a {
     padding: .5rem .7rem;
     border-radius: ($spacer * .125);
-    @extend .mdl-color-text--grey-700, .mdl-color--grey-100;
+    color: unquote("rgb(#{$palette-grey-700})");
+    background: unquote("rgb(#{$palette-grey-100})");
     &:hover {
       text-decoration: none !important;
-      @extend .mdl-color--grey-200;
+      background: unquote("rgb(#{$palette-grey-200})");
     }
   }
 }
