--- a/assets/styles/pages/_home.scss
+++ b/assets/styles/pages/_home.scss
@@ -1,6 +1,14 @@
-$entry-thumbnail-size: 80px;
+$entry-thumbnail-size: 5rem;//80px;
 
-.article-container {
+.page-header {
+  margin: 0;
+  padding: 1rem;
+  font-size: $font-size-h4;
+  font-weight: normal;
+  border-bottom: 1px solid unquote("rgb(#{$palette-grey-300})");
+}
+
+.entry-home-container {
   border-radius: ($spacer * .125);
   box-shadow: 0 1px 4px rgba(0, 0, 0, .04);
   border: 1px solid rgba(0, 0, 0, .09);
@@ -10,25 +18,18 @@ $entry-thumbnail-size: 80px;
   // &.mdl-cell {
   //   margin: 0;
   // }
-
-  h1 {
-    margin: 0;
-    padding: 1rem;
-    font-size: $font-size-h4;
-    font-weight: normal;
-    border-bottom: 1px solid unquote("rgb(#{$palette-grey-300})");
-  }
 }
 
-.entry-wrap {
-  padding: 1rem;
+// Image
+.entry-home {
   transition: background .3s $animation-curve-default;
   border-bottom: 1px solid unquote("rgb(#{$palette-grey-200})");
+  user-select: none;
 
   &:hover {
     cursor: pointer;
     background: unquote("rgb(#{$palette-grey-100})");
-    .entry-image-sheet {
+    .entry-home-image-sheet {
       transform: scale(1.15);
     }
   }
@@ -38,7 +39,9 @@ $entry-thumbnail-size: 80px;
   }
 
   a {
+    display: block;
     color: inherit;
+    padding: 1rem;
     // for display:table
     border-collapse: separate;
     border-spacing: 1rem 0;
@@ -49,21 +52,31 @@ $entry-thumbnail-size: 80px;
 
 }
 
-.entry-image,
-.entry-body {
+.entry-home-image,
+.entry-home-body {
   display: table-cell;
   vertical-align: top;
 }
 
-// .entry-image {}
-
-.entry-image-frame {
+.entry-home-image-frame {
   @include size($entry-thumbnail-size);
   border-radius: ($spacer * .125);
   overflow: hidden;
+  border: 1px solid unquote("rgb(#{$palette-grey-200})");
+
+  &.none {
+    .material-icons {
+      font-size: 2rem;
+      @include size(2rem);
+      color: unquote("rgb(#{$palette-grey-400})");
+    }
+  }
+
 }
 
-.entry-image-sheet {
+.entry-home-image-sheet {
+  text-align: center;
+  line-height: $entry-thumbnail-size;
   @include size($entry-thumbnail-size);
   max-height: $entry-thumbnail-size;
   background: unquote("rgb(#{$palette-grey-50})") 50% no-repeat;
@@ -71,37 +84,24 @@ $entry-thumbnail-size: 80px;
   transition: transform .2s cubic-bezier(.08, .82, .17, 1);
 }
 
-.entry-image-none {
-  text-align: center;
-  line-height: $entry-thumbnail-size;
-
-  .material-icons {
-    font-size: 2rem;
-    @include size(2rem);
-    color: unquote("rgb(#{$palette-grey-400})");
-  }
-}
-
-.entry-body {
+// Text
+.entry-home-body {
   width: 100%;
   height: ($entry-thumbnail-size * 1.2);
-
-  // .entry-header {}
-  .entry-title {
-    color: inherit;
-    font-weight: normal;
-    font-size: $font-size-h3;
-    word-wrap: break-word;
-    margin: 0 0 .5rem;
-  }
-  .entry-summary {
-    font-size: $font-size-sm;
-    text-align: justify;
-    color: unquote("rgb(#{$palette-grey-600})");
-  }
-  .entry-footer {
-    display: table;
-    width: 100%;
-    text-align: right;
-  }
+}
+.entry-home-title {
+  font-weight: normal;
+  font-size: $font-size-h3;
+  margin: 0 0 .5rem;
+  word-wrap: break-word;
+}
+.entry-home-summary {
+  color: unquote("rgb(#{$palette-grey-600})");
+  font-size: $font-size-sm;
+  text-align: justify;
+}
+.entry-home-footer {
+  display: table;
+  width: 100%;
+  text-align: right;
 }
