--- a/assets/styles/pages/_single.scss
+++ b/assets/styles/pages/_single.scss
@@ -16,7 +16,6 @@
 
   h1 {
     font-weight: normal;
-    line-height: 1.3;
     word-wrap: break-word;
     margin: ($spacer / 2) auto;
   }
@@ -34,10 +33,14 @@
     }
   }
 
-  h2,
-  h3 {
-    line-height: 1.3;
-    margin-top: 2rem;
+  > h2 {
+    margin: 4rem 0 1rem;
+    padding-bottom: .75rem;
+    border-bottom: 2px solid unquote("rgb(#{$palette-grey-200})");
+  }
+
+  > h3 {
+    margin: 2rem 0 .5rem;
   }
 
   p,
