--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -8,6 +8,10 @@
 // Material Deign Lite
 @import "vendor/material-design-lite";
 @import "vendor/mdl-tweak";
+
+// grid framework: bulma
+@import "vendor/bulma";
+
 @import "vendor/bootstrap-migration";
 
 // styles
