--- a/assets/styles/base/_grid.scss
+++ b/assets/styles/base/_grid.scss
@@ -1,32 +1,32 @@
 .wrap {
   main {
-    padding: 0 ($layout-header-desktop-baseline - $grid-desktop-margin);
+    // padding: 0 ($layout-header-desktop-baseline - $grid-desktop-margin);
 
-    > .mdl-grid {
-      padding-left: 0;
-      padding-right: 0;
-    }
+    // > .mdl-grid {
+    //   padding-left: 0;
+    //   padding-right: 0;
+    // }
 
-    @media screen and (max-width: $layout-screen-size-threshold) {
-      $grid-padding: $grid-desktop-margin + ($grid-desktop-gutter / 2);
-      padding: 0 ($layout-header-desktop-baseline - $grid-padding);
-    }
-
-    @media screen and (max-width: $screen-sm) {
-      padding: 0;
-    }
+    // @media screen and (max-width: $layout-screen-size-threshold) {
+    //   $grid-padding: $grid-desktop-margin + ($grid-desktop-gutter / 2);
+    //   padding: 0 ($layout-header-desktop-baseline - $grid-padding);
+    // }
+    //
+    // @media screen and (max-width: $screen-sm) {
+    //   padding: 0;
+    // }
   }
 }
 
 .main-container {
-  min-height: calc(100vh - #{$layout-desktop-header-height});
-  max-width: $container-max-width;
-
-  @media screen and (max-width: $layout-screen-size-threshold) {
-    min-height: calc(100vh - #{$layout-mobile-header-height});
-  }
+  // min-height: calc(100vh - #{$layout-desktop-header-height});
+  // max-width: $container-max-width;
+  //
+  // @media screen and (max-width: $layout-screen-size-threshold) {
+  //   min-height: calc(100vh - #{$layout-mobile-header-height});
+  // }
 }
 
 .pager {
-  max-width: $container-max-width;
+  // max-width: $container-max-width;
 }
